<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/cartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_order"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="10dp" />

    <ListView
        android:id="@+id/cartItemsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/totalPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/total_0_00"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tvTransactionId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_id_12345"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_100_00"
            android:textColor="#4E342E"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_01_01_2025"
            android:textColor="#4E342E"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>

