<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#340093"
        android:title="@string/home"
        android:titleTextColor="#FFFFFF"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Top Image Banner -->
            <ImageView
                android:id="@+id/top_banner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="60dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/food_banner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/top_dishes"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <!-- Horizontal ScrollView for Top Dishes -->
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginEnd="8dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/image_desc"
                        android:src="@drawable/dish1" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginEnd="8dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/image_desc"
                        android:src="@drawable/dish2" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginEnd="8dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/image_desc"
                        android:src="@drawable/dish3" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginEnd="8dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/image_desc"
                        android:src="@drawable/dish4" />
                </LinearLayout>
            </HorizontalScrollView>

            <!-- Previous Order Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/previous_order"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/txt_order_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_01_2025"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/txt_order_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_id_w9b320cm79lkc29"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_order_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_price"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"/>

                        <TextView
                            android:id="@+id/txt_view_order"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_order"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="16dp"
                android:background="@android:color/white">

                <Button
                    android:id="@+id/btnMenu"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu"
                    android:contentDescription="@string/menu_button_description" />

                <Button
                    android:id="@+id/btnCart"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cart"
                    android:contentDescription="@string/cart_button_description" />

                <!-- Segment 4: Language Selection -->
                <Button
                    android:id="@+id/btnLanguageSwitch"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/language"
                    android:contentDescription="@string/switch_language_english_hindi"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
