<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@drawable/rounded_border"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/cartDishName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dish_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cartDishQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x1"
        android:textSize="16sp"
        android:paddingStart="10dp" />

    <TextView
        android:id="@+id/cartDishPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:paddingLeft="10dp" />
</LinearLayout>
